--- a/doc/release-notes/rl-2511.section.md
+++ b/doc/release-notes/rl-2511.section.md
@@ -18,7 +18,7 @@
 - `base16-builder` node package has been removed due to lack of upstream maintenance.
 - `gentium` package now provides `Gentium-*.ttf` files, and not `GentiumPlus-*.ttf` files like before. The font identifiers `Gentium Plus*` are available in the `gentium-plus` package, and if you want to use the more recently updated package `gentium` [by sil](https://software.sil.org/gentium/), you should update your configuration files to use the `Gentium` font identifier.
 
-- `lima` package no longer includes guest agents except for the host's architecture; these are now in `lima-additional-guestagents` package. If your guest VM's architecture differs from your Lima host's, you should also install `lima-additional-guestagents`. See also [upstream issue](https://github.com/lima-vm/lima/issues/3563).
+- `lima` package now only includes the guest agent for the host's architecture by default. If your guest VM's architecture differs from your Lima host's, you'll need to enable the `lima-additional-guestagents` package by setting `withAdditionalGuestAgents = true` when overriding lima with this input.
 
 ## Other Notable Changes {#sec-nixpkgs-release-25.11-notable-changes}
 
