nixos/nix-daemon: go via the Nix daemon even as `root`
The NixOS module for the Nix daemon now defaults to using
`NIX_REMOTE=daemon`
for all users by setting `environment.sessionVariables.NIX_REMOTE =
"daemon";`.

This ensures that all user-initiated Nix operations go through the
`nix-daemon`
even when run interactively as the root user.

Most users does not know about the single user mode anymore and it is
*de*creasingly supported. With things like cgroups, running without
mediation via the nix-daemon is increasingly harder and should be
reserved to specialized tools that understands how to create the right
environment to run the Nix tools that would perform direct store access.

Manual overrides are still possible by simply setting
`nix.envVars.NIX_REMOTE = "";` or by unsetting it in your interactive
environment.

Do note that doing `sudo nixos-rebuild` will exactly fall under this
scenario, i.e. the Nix invocations will perform direct store access
instead of using the Nix daemon. After this change, this will not be the
case anymore.

Change-Id: Ia5eaa3ba2fdef40a2aa47a1208c6ffcbc4601bbd
Signed-off-by: Raito Bezarius <masterancpp@gmail.com>

--- a/doc/release-notes/rl-2511.section.md
+++ b/doc/release-notes/rl-2511.section.md
@@ -13,6 +13,8 @@
 
 <!-- To avoid merge conflicts, consider adding your item at an arbitrary place in the list instead. -->
 
+- `NIX_REMOTE=daemon` is now set by default in any shell session, this means that all Nix invocations goes via the `nix-daemon` by default now. If you had a Nix invocation that was relying on `NIX_REMOTE` being unset and performing a direct store access, this usecase will be broken and to repair it, `NIX_REMOTE` needs to be unset before invoking `nix`. This now ensures that, even, as `root`, `nix` invocations goes through the Nix daemon.
+
 - The `offrss` package was removed due to lack of upstream maintenance since 2012. It's recommended for users to migrate to another RSS reader
 
 - `base16-builder` node package has been removed due to lack of upstream maintenance.
